enabled utf-8 for files